--- a/index.html
+++ b/index.html
@@ -194,58 +194,64 @@ Once this works, we'll make one small UI improvement at a time (animations, edit
                   {notes.length === 0 ? (
                     <div className="text-sm text-gray-500">No notes yet — add your first one.</div>
                   ) : (
-                    <ul className="space-y-3">
+
+                  
+                    <ul className="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 justify-center">
                         {notes.map(n => (
                             <li
-                                key={n.id}
-                                className="p-3 border rounded-xl bg-white shadow-sm transform transition-all duration-300 hover:shadow-lg hover:scale-[1.02] animate-fadeIn"
+                            key={n.id}
+                            className="p-4 border rounded-2xl shadow-sm transform transition-all duration-300 hover:shadow-lg hover:scale-[1.02] animate-fadeIn flex flex-col justify-between"
+                            style={{
+                                backgroundColor: ["#F2F1ED", "#F2F1ED", "#CDE5D9", "#BBDEFB", "#F0E2C3"][n.id % 5],
+                                width: '185px',
+                                height: '140px'
+                            }}
+                            >
+                            <div className="overflow-hidden">
+                                <div className="font-semibold text-lg text-gray-800">{n.title}</div>
+                                <div className="text-gray-700 mt-2 whitespace-pre-wrap overflow-hidden">{n.content}</div>
+                            </div>
+
+                            <div className="flex items-center justify-between mt-3">
+                                <div className="text-xs text-gray-400">
+                                {n.created_at ? new Date(n.created_at).toLocaleString() : ''}
+                                </div>
+
+                                <button
+                                onClick={async () => {
+                                    if (!confirm("Delete this note?")) return;
+                                    try {
+                                    setDeletingId(n.id);
+                                    const res = await fetch(API_URL + `?id=eq.${n.id}`, {
+                                        method: "DELETE",
+                                        headers: {
+                                        "apikey": SUPABASE_ANON_KEY,
+                                        "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
+                                        }
+                                    });
+                                    if (!res.ok) {
+                                        const txt = await res.text();
+                                        console.error("Delete failed", res.status, txt);
+                                        throw new Error("Delete failed");
+                                    }
+                                    await loadNotes();
+                                    } catch (err) {
+                                    console.error("Delete failed", err);
+                                    setError("Error deleting note");
+                                    } finally {
+                                    setDeletingId(null);
+                                    }
+                                }}
+                                disabled={deletingId === n.id}
+                                className="text-xs text-red-600 hover:text-red-800 transition disabled:opacity-50"
                                 >
-                                <div className="flex justify-between items-start">
-                                    <div>
-                                        <div className="font-semibold text-lg text-gray-800">{n.title}</div>
-                                        <div className="text-gray-600 mt-1">{n.content}</div>
-                                    </div>
-                                    <div className="flex flex-col items-end gap-1 ml-4">
-                                        <div className="text-xs text-gray-400">
-                                            {n.created_at ? new Date(n.created_at).toLocaleString() : ''}
-                                        </div>
-                                    <button
-                                        onClick={async () => {
-                                            if (!confirm("Delete this note?")) return;
-                                            try {
-                                            setDeletingId(n.id);
-                                            const res = await fetch(API_URL + `?id=eq.${n.id}`, {
-                                                method: "DELETE",
-                                                headers: {
-                                                "apikey": SUPABASE_ANON_KEY,
-                                                "Authorization": `Bearer ${SUPABASE_ANON_KEY}`,
-                                                },
-                                            });
-                                            if (!res.ok) {
-                                                const txt = await res.text();
-                                                console.error("Delete failed", res.status, txt);
-                                                throw new Error("Delete failed");
-                                            }
-                                            await loadNotes();
-                                            } catch (err) {
-                                            console.error("Delete failed", err);
-                                            setError("Error deleting note");
-                                            } finally {
-                                            setDeletingId(null);
-                                            }
-                                        }}
-                                        disabled={deletingId === n.id}
-                                        className="text-xs text-red-500 hover:text-red-700 transition disabled:opacity-50"
-                                        >
-                                        {deletingId === n.id ? "Deleting..." : "Delete"}
-                                    </button>
-
-                                </div>
-                                </div>
-
+                                {deletingId === n.id ? "Deleting..." : "Delete"}
+                                </button>
+                            </div>
                             </li>
                         ))}
                     </ul>
+
 
                   )}
                 </div>
