--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Once this works, we'll make one small UI improvement at a time (animations, edit
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>QuickNotes — React (CDN)</title>
+    <title>QuickNotes</title>
     <!-- Tailwind CDN (quick and easy) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- React + ReactDOM (development builds, fine for local/demo) -->
@@ -146,7 +146,7 @@ Once this works, we'll make one small UI improvement at a time (animations, edit
             
             <div className="w-full max-w-2xl bg-white p-6 rounded-xl shadow-lg mt-20">
               <div className="flex items-start justify-between">
-                <h1 className="text-2xl font-semibold">QuickNotes — React</h1>
+                <h1 className="text-2xl font-semibold">QuickNotes </h1>
                 <div className="text-sm text-gray-500">Local demo</div>
               </div>
 
